--- a/registry/package.json
+++ b/registry/package.json
@@ -78,6 +78,7 @@
         "joi": "^17.6.0",
         "knex": "^1.0.5",
         "lodash": "^4.17.21",
+        "mysql": "^2.18.1",
         "newrelic": "^8.9.1",
         "openid-client": "^5.1.4",
         "passport": "^0.5.2",
