--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,10 @@ on:
     branches:
       - master
     tags-ignore:
-      - '**'
+      - "**"
   pull_request:
     branches:
-      - '**'
+      - "**"
 
 jobs:
   build_ilc:
@@ -23,68 +23,67 @@ jobs:
             ref: ${{ github.base_ref }}
         exclude:
           - branch:
-                ref: ''
+              ref: ""
 
     steps:
-    - uses: actions/checkout@v1
-      with:
-        ref: ${{ matrix.branch.ref }}
+      - uses: actions/checkout@v1
+        with:
+          ref: ${{ matrix.branch.ref }}
 
-    - id: sha7
-      run: echo "SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+      - id: sha7
+        run: |
+          echo "SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+          echo "BRANCH=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
 
-    - run: cat ilc/server/app.spec.js
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
 
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
 
-    - name: Set up Docker Buildx
-      id: buildx
-      uses: docker/setup-buildx-action@v1
+      - name: Docker ILC auth
+        run: echo "${{ secrets.DOCKER_HUB_BROTHERS_TOKEN }}" | docker login --username brothers --password-stdin
 
-    - name: Docker ILC auth
-      run: echo "${{ secrets.DOCKER_HUB_BROTHERS_TOKEN }}" | docker login --username brothers --password-stdin
+      - name: Build the Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: ./ilc
+          platforms: linux/amd64,linux/arm64
+          push: true
+          cache-from: |
+            type=registry,ref=namecheap/ilc_tmp:buildcache
+          cache-to: |
+            type=registry,ref=namecheap/ilc_tmp:buildcache,mode=max
+          tags: |
+            namecheap/ilc_tmp:${{ env.SHA }}
 
-    - name: Build the Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: ./ilc
-        platforms: linux/amd64,linux/arm64
-        push: true
-        cache-from: |
-          type=registry,ref=namecheap/ilc_tmp:buildcache
-        cache-to: |
-          type=registry,ref=namecheap/ilc_tmp:buildcache,mode=max
-        tags: |
-          namecheap/ilc_tmp:${{ env.SHA }}
-          namecheap/ilc_tmp:latest
+      - name: Run server-side tests
+        run: docker run namecheap/ilc_tmp:$SHA npm run test:ci
 
-    - name: Run server-side tests
-      run: docker run namecheap/ilc_tmp:$SHA npm run test:ci
+      - name: Run server-side tests coverage
+        run: docker run --volume $(pwd)/artifacts/ilc/.test_output/server:/temporary namecheap/ilc_tmp:$SHA bash -c "npm run test:coverage && mv .nyc_output/* /temporary"
 
-    - name: Run server-side tests coverage
-      run: docker run --volume $(pwd)/artifacts/ilc/.test_output/server:/temporary namecheap/ilc_tmp:$SHA bash -c "npm run test:coverage && mv .nyc_output/* /temporary"
+      - uses: actions/upload-artifact@v2
+        with:
+          name: ${{ matrix.branch.name }}-server-side-tests-artifacts
+          path: artifacts/ilc/.test_output/server/
 
-    - uses: actions/upload-artifact@v2
-      with:
-        name: ${{ matrix.branch.name }}-server-side-tests-artifacts
-        path: artifacts/ilc/.test_output/server/
+      - name: Build the Docker image to test client-side
+        run: |
+          cd ./ilc/
+          DOCKER_BUILDKIT=1 docker build . --file ./Test.Dockerfile --tag ilc:tmp-test-client --build-arg BASE_IMAGE=namecheap/ilc_tmp:$SHA
 
-    - name: Build the Docker image to test client-side
-      run: |
-        cd ./ilc/
-        DOCKER_BUILDKIT=1 docker build . --file ./Test.Dockerfile --tag ilc:tmp-test-client --build-arg BASE_IMAGE=namecheap/ilc_tmp:$SHA
+      - name: Run client-side tests
+        run: |
+          echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf
+          sudo sysctl -p
+          docker run --volume $(pwd)/artifacts/ilc/.test_output/client:/temporary ilc:tmp-test-client bash -c "npm run test:client -- --browsers ChromeHeadlessWithoutSecurity && mv .karma_output/* /temporary"
 
-    - name: Run client-side tests
-      run: |
-        echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf
-        sudo sysctl -p
-        docker run --volume $(pwd)/artifacts/ilc/.test_output/client:/temporary ilc:tmp-test-client bash -c "npm run test:client -- --browsers ChromeHeadlessWithoutSecurity && mv .karma_output/* /temporary"
-
-    - uses: actions/upload-artifact@v2
-      with:
-        name: ${{ matrix.branch.name }}-client-side-tests-artifacts
-        path: artifacts/ilc/.test_output/client/
+      - uses: actions/upload-artifact@v2
+        with:
+          name: ${{ matrix.branch.name }}-client-side-tests-artifacts
+          path: artifacts/ilc/.test_output/client/
 
   build_registry:
     name: Build Registry
@@ -98,7 +97,7 @@ jobs:
             ref: ${{ github.base_ref }}
         exclude:
           - branch:
-                ref: ''
+              ref: ""
 
     steps:
       - uses: actions/checkout@v1
@@ -109,7 +108,7 @@ jobs:
         run: echo "SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         id: buildx
@@ -123,31 +122,130 @@ jobs:
       - name: Build the Docker image
         uses: docker/build-push-action@v3
         with:
-        #   context: "{{defaultContext}}:registry"
           context: ./registry
           platforms: linux/amd64,linux/arm64
           push: true
           cache-from: |
-            type=registry,ref=namecheap/ilc_tmp:buildcache_registry
+            type=registry,ref=namecheap/ilc_tmp:buildcache_registry_${{ matrix.branch.name }}
           cache-to: |
-            type=registry,ref=namecheap/ilc_tmp:buildcache_registry,mode=max
+            type=registry,ref=namecheap/ilc_tmp:buildcache_registry_${{ matrix.branch.name }},mode=max
           tags: |
             namecheap/ilc_tmp:reg_${{ env.SHA }}
-            namecheap/ilc_tmp:reg_latest
+
+  registry_tests:
+    name: Test Registry
+    needs: [build_registry]
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        branch:
+          - name: src
+            ref: ${{ github.ref }}
+          - name: dest
+            ref: ${{ github.base_ref }}
+        database:
+          - client: sqlite3
+          - client: mysql
+            host: mysql
+            port: 3306
+          - client: pg
+            host: postgres
+            port: 5432
+        exclude:
+          - branch:
+              ref: ""
+    env:
+      DB_CLIENT: ${{ matrix.database.client }}
+      DB_NAME: ilc_${{ matrix.branch.name }}
+
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: pwd
+        ports:
+          - 3306:3306
+        volumes:
+          - ${{ github.workspace }}:/usr/src/ilc
+        options: --name=mysql --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+      postgres:
+        image: postgres:15.4-alpine
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: pwd
+        volumes:
+          - ${{ github.workspace }}:/usr/src/ilc
+        ports:
+          - 5432:5432
+        options: --name=postgres --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ matrix.branch.ref }}
+
+      - id: sha7
+        run: echo "SHA=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+
+      - name: Docker registry auth
+        run: echo "${{ secrets.DOCKER_HUB_BROTHERS_TOKEN }}" | docker login --username brothers --password-stdin
 
       - name: Run tests
-        run: docker run --volume $(pwd)/artifacts/registry/.test_output:/temporary namecheap/ilc_tmp:reg_$SHA sh -c "npm run test:ci && mv .nyc_output/* /temporary"
+        run: >-
+          bash ./registry/scripts/reset.sh;
+          docker run
+          --volume $(pwd)/artifacts/registry/.test_output:/temporary
+          --network ${{ job.container.network }}
+          -e DB_CLIENT=${{ matrix.database.client }}
+          -e DB_HOST=${{ matrix.database.host }}
+          -e DB_PORT=${{ matrix.database.port }}
+          -e DB_USER=root
+          -e DB_PASSWORD=pwd
+          -e DB_NAME=$DB_NAME
+          namecheap/ilc_tmp:reg_$SHA
+          sh -c "npm run test:ci && mv .nyc_output/* /temporary"
 
       - uses: actions/upload-artifact@v2
         with:
-          name: ${{ matrix.branch.name }}-registry-tests-artifacts
+          name: ${{ matrix.branch.name }}-${{ matrix.database.client }}-registry-tests-artifacts
           path: artifacts/registry/.test_output/
 
   e2e_tests:
     name: Run E2E tests
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        database:
+          - client: mysql
+            host: mysql
+            port: 3306
+          - client: pg
+            host: postgres
+            port: 5432
+
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: pwd
+          MYSQL_DATABASE: ilc
+        ports:
+          - 3306:3306
+        options: --name=mysql --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+      postgres:
+        image: postgres:15.4-alpine
+        env:
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: pwd
+          POSTGRES_DB: ilc
+        ports:
+          - 5432:5432
+        options: --name=postgres --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
 
       - name: Use Node.js 16
         uses: actions/setup-node@v1
@@ -172,7 +270,14 @@ jobs:
         run: npm run build
 
       - name: Run E2E tests
-        run: cd e2e && npm run start
+        run: cd e2e && npm run start:verbose
+        env:
+          DB_CLIENT: ${{ matrix.database.client }}
+          DB_HOST: localhost
+          DB_PORT: ${{ matrix.database.port }}
+          DB_USER: root
+          DB_PASSWORD: pwd
+          DB_NAME: ilc
 
       - uses: actions/upload-artifact@v2
         if: failure()
@@ -183,9 +288,10 @@ jobs:
   coverage_report:
     name: PR Coverage Report
     runs-on: ubuntu-latest
-    needs: [build_ilc, build_registry]
+    needs: [build_ilc, registry_tests]
     if: github.base_ref
     steps:
+      - uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
       - name: Create coverage report for ilc/server
         id: ilc-server-coverage-report
@@ -208,6 +314,10 @@ jobs:
           oldCodeCoveragePath: ./dest-client-side-tests-artifacts/coverage/chrome/coverage-summary.json
           newCodeCoveragePath: ./src-client-side-tests-artifacts/coverage/chrome/coverage-summary.json
           total_delta: 2
+      - name: Merge coverage report for registry
+        run: |
+          bash .github/workflows/merge-registry-coverage.sh dest
+          bash .github/workflows/merge-registry-coverage.sh src
       - name: Create coverage report for registry
         id: registry-coverage-report
         if: success() || failure()
@@ -216,8 +326,8 @@ jobs:
           fullCoverageDiff: true
           autorun: false
           postComment: false
-          oldCodeCoveragePath: ./dest-registry-tests-artifacts/coverage/coverage-summary.json
-          newCodeCoveragePath: ./src-registry-tests-artifacts/coverage/coverage-summary.json
+          oldCodeCoveragePath: ./dest-merged-registry-tests-artifacts/coverage/coverage-summary.json
+          newCodeCoveragePath: ./src-merged-registry-tests-artifacts/coverage/coverage-summary.json
           total_delta: 2
       - name: Compose comment
         if: success() || failure()
@@ -238,7 +348,7 @@ jobs:
           path: report.md
 
   push_images:
-    needs: [build_ilc, build_registry, e2e_tests]
+    needs: [build_ilc, registry_tests, e2e_tests]
     name: Push images to registry
     runs-on: ubuntu-latest
     steps:
