--- a/ilc/package.json
+++ b/ilc/package.json
@@ -42,6 +42,7 @@
     "lzutf8": "^0.6.1",
     "newrelic": "^8.9.1",
     "node-html-parser": "^6.1.6",
+    "parseurl": "^1.3.3",
     "serve-static": "^1.15.0",
     "single-spa": "5.6.0",
     "systemjs": "6.10.1",
