--- a/registry/package.json
+++ b/registry/package.json
@@ -6,22 +6,24 @@
     "scripts": {
         "tsc": "tsc",
         "compile": "tsc --incremental",
-        "dev": "nodemon -e ts,json5 --exec \"npx tsc --incremental && npm run start | pino-pretty || exit 1\"",
+        "dev": "nodemon -e ts,json5 --exec \"npx tsc --incremental && npm run start | pino-pretty\" ",
         "build": "npm run compile && cd ./client && npm run build",
-        "start": "node -r source-map-support/register ./build/server/index.js",
+        "start": "dotenv -- node -r source-map-support/register ./build/server/index.js",
         "start-docker": "npm run migrate && npm start",
         "knex": "knex",
-        "migrate": "knex --knexfile config/knexfile.ts migrate:latest",
+        "migrate": "dotenv -- knex --knexfile config/knexfile.ts migrate:latest",
         "migrate:make": "knex --knexfile config/knexfile.ts migrate:make",
         "migrate:rollback": "knex --knexfile config/knexfile.ts migrate:rollback",
-        "seed": "knex --knexfile config/knexfile.ts seed:run",
+        "seed": "dotenv -- knex --knexfile config/knexfile.ts seed:run",
         "seed:make": "knex --knexfile config/knexfile.ts seed:make -x ts",
+        "test": "cross-env NODE_ENV=test NODE_CONFIG_ENV=sqlite-test mocha",
+        "test:mysql": "cross-env-shell NODE_ENV=test NODE_CONFIG_ENV=mysql-test DB_CLIENT=mysql \"npm run reset && mocha\" ",
+        "test:postgres": "cross-env-shell NODE_ENV=test NODE_CONFIG_ENV=postgres-test DB_CLIENT=pg \"npm run reset && mocha\" ",
+        "test:ci": "npm run migrate && cross-env NODE_ENV=test nyc mocha --forbid-only",
         "test:coverage": "cross-env NODE_ENV=test nyc mocha",
-        "reset": "rimraf server/dbfiles/*.sqlite && npm run migrate",
-        "test": "npm run reset && cross-env NODE_ENV=test mocha",
-        "test:ci": "npm run reset && cross-env NODE_ENV=test nyc mocha --forbid-only",
-        "postinstall": "npm run migrate && npm run seed",
-        "assetsdiscovery": "cross-env NODE_ENV=production INTERVAL=2000 node ./build/server/runnerAssetsDiscovery.js"
+        "reset": "dotenv bash ./scripts/reset.sh && npm run migrate",
+        "assetsdiscovery": "cross-env NODE_ENV=production INTERVAL=2000 node -r source-map-support/register ./build/server/runnerAssetsDiscovery.js",
+        "assetsdiscovery:dev": "nodemon -e ts,json5 --exec \"npx tsc --incremental && npm run assetsdiscovery\" "
     },
     "author": "",
     "license": "Apache-2.0",
@@ -64,13 +66,13 @@
         "@namecheap/error-extender": "^1.2.0",
         "@newrelic/native-metrics": "^8.0.0",
         "@types/escape-html": "^1.0.2",
-        "@vscode/sqlite3": "^5.0.8",
         "axios": "^0.26.1",
         "bcrypt": "^5.0.1",
         "body-parser": "^1.20.0",
         "config": "^3.3.7",
         "connect-session-knex": "^2.1.1",
         "deep-equal": "^2.1.0",
+        "dotenv-cli": "^7.3.0",
         "escape-html": "^1.0.3",
         "express": "^4.17.3",
         "express-session": "^1.17.2",
@@ -78,7 +80,7 @@
         "ilc-plugins-sdk": "^1.7.0",
         "is-valid-domain": "0.1.6",
         "joi": "^17.6.0",
-        "knex": "^1.0.5",
+        "knex": "^2.4.2",
         "lodash": "^4.17.21",
         "mysql": "^2.18.1",
         "newrelic": "^8.9.1",
@@ -87,9 +89,11 @@
         "passport": "^0.5.2",
         "passport-http-bearer": "^1.0.1",
         "passport-local": "^1.0.0",
+        "pg": "^8.11.3",
         "query-string": "^7.1.1",
         "serve-static": "^1.15.0",
         "source-map-support": "^0.5.21",
+        "sqlite3": "^5.1.6",
         "url-join": "^4.0.1",
         "uuid": "^8.3.2"
     },
