--- a/registry/Dockerfile
+++ b/registry/Dockerfile
@@ -9,13 +9,10 @@ RUN npm install -g stdout-mq@^2.4.0
 WORKDIR /codebase
 
 COPY package-lock.json package.json /codebase/
-RUN npm ci --ignore-scripts
-RUN npm rebuild bcrypt --build-from-source
-RUN npm rebuild @vscode/sqlite3
-RUN npm rebuild @newrelic/native-metrics
+RUN npm ci
 
 COPY client/package-lock.json client/package.json /codebase/client/
-RUN cd ./client && npm ci --ignore-scripts
+RUN cd ./client && npm ci
 
 ADD ./ /codebase
 
