--- a/registry/package.json
+++ b/registry/package.json
@@ -6,9 +6,9 @@
     "scripts": {
         "tsc": "tsc",
         "compile": "tsc --incremental",
-        "dev": "nodemon -e ts,json5 --exec \"npx tsc --incremental && npm run start | pino-pretty\" ",
+        "dev": "nodemon -e ts,json5 --exec \"npx tsc --incremental && dotenv -- npm run start | pino-pretty\" ",
         "build": "npm run compile && cd ./client && npm run build",
-        "start": "dotenv -- node -r source-map-support/register ./build/server/index.js",
+        "start": "node -r source-map-support/register ./build/server/index.js",
         "start-docker": "npm run migrate && npm start",
         "knex": "knex",
         "migrate": "dotenv -- knex --knexfile config/knexfile.ts migrate:latest",
@@ -23,7 +23,7 @@
         "test:coverage": "cross-env NODE_ENV=test nyc mocha",
         "reset": "dotenv bash ./scripts/reset.sh && npm run migrate",
         "assetsdiscovery": "cross-env NODE_ENV=production INTERVAL=2000 node -r source-map-support/register ./build/server/runnerAssetsDiscovery.js",
-        "assetsdiscovery:dev": "nodemon -e ts,json5 --exec \"npx tsc --incremental && npm run assetsdiscovery\" "
+        "assetsdiscovery:dev": "nodemon -e ts,json5 --exec \"npx tsc --incremental && dotenv -- npm run assetsdiscovery | pino-pretty\" "
     },
     "author": "",
     "license": "Apache-2.0",
