--- a/registry/client/package.json
+++ b/registry/client/package.json
@@ -9,33 +9,33 @@
         "build:watch": "cross-env NODE_ENV=development webpack-cli --color --watch --mode development"
     },
     "devDependencies": {
-        "@babel/cli": "^7.12.10",
-        "@babel/core": "^7.1.2",
+        "@babel/cli": "^7.23.0",
+        "@babel/core": "^7.23.0",
         "@babel/plugin-proposal-class-properties": "^7.1.0",
         "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-        "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-        "@babel/preset-env": "^7.1.0",
-        "@babel/preset-react": "^7.0.0",
-        "@babel/preset-typescript": "^7.1.0",
-        "babel-loader": "^8.0.4",
-        "copy-webpack-plugin": "^6.1.1",
-        "css-loader": "^3.4.2",
-        "file-loader": "^6.0.0",
-        "html-loader": "~0.5.5",
-        "html-webpack-plugin": "~3.2.0",
-        "ignore-not-found-export-plugin": "^1.0.1",
-        "mini-css-extract-plugin": "^0.9.0",
-        "style-loader": "~0.20.3",
-        "wait-on": "^3.2.0",
-        "webpack": "^4.42.1",
-        "webpack-bundle-analyzer": "^4.5.0",
-        "webpack-cli": "^4.9.2"
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/preset-env": "^7.22.20",
+        "@babel/preset-react": "^7.22.15",
+        "@babel/preset-typescript": "^7.23.0",
+        "babel-loader": "^9.1.3",
+        "copy-webpack-plugin": "^11.0.0",
+        "css-loader": "^6.8.1",
+        "file-loader": "^6.2.0",
+        "html-loader": "~4.2.0",
+        "html-webpack-plugin": "~5.5.3",
+        "mini-css-extract-plugin": "^2.7.6",
+        "style-loader": "~3.3.3",
+        "wait-on": "^7.0.1",
+        "webpack": "^5.88.2",
+        "webpack-bundle-analyzer": "^4.9.1",
+        "webpack-cli": "^5.1.4"
     },
     "dependencies": {
         "@babel/polyfill": "^7.0.0",
         "@material-ui/core": "^4.11.2",
         "@material-ui/icons": "^4.11.2",
         "brace": "^0.11.1",
+        "core-js": "^3.33.0",
         "cross-env": "^7.0.3",
         "js-cookie": "^2.2.1",
         "jsoneditor": "^9.7.4",
