--- a/registry/package.json
+++ b/registry/package.json
@@ -29,76 +29,76 @@
     "license": "Apache-2.0",
     "devDependencies": {
         "@istanbuljs/nyc-config-typescript": "^1.0.2",
-        "@types/bcrypt": "^3.0.0",
-        "@types/chai": "4.3.0",
-        "@types/config": "0.0.41",
-        "@types/deep-equal": "^1.0.1",
-        "@types/express": "4.17.13",
-        "@types/express-serve-static-core": "4.17.28",
-        "@types/express-session": "^1.17.4",
-        "@types/is-valid-domain": "0.0.1",
-        "@types/lodash": "^4.14.181",
-        "@types/mocha": "^9.1.0",
-        "@types/newrelic": "^7.0.3",
-        "@types/node": "^16.11.27",
-        "@types/passport": "^1.0.7",
-        "@types/passport-http-bearer": "^1.0.37",
-        "@types/passport-local": "^1.0.34",
-        "@types/sinon": "^10.0.11",
-        "@types/supertest": "2.0.12",
+        "@types/bcrypt": "^5.0.0",
+        "@types/chai": "4.3.6",
+        "@types/config": "3.3.1",
+        "@types/deep-equal": "^1.0.2",
+        "@types/escape-html": "^1.0.2",
+        "@types/express": "4.17.18",
+        "@types/express-serve-static-core": "4.17.37",
+        "@types/express-session": "^1.17.8",
+        "@types/is-valid-domain": "0.0.2",
+        "@types/lodash": "^4.14.199",
+        "@types/mocha": "^10.0.2",
+        "@types/newrelic": "^9.14.1",
+        "@types/node": "^20.8.3",
+        "@types/passport": "^1.0.13",
+        "@types/passport-http-bearer": "^1.0.38",
+        "@types/passport-local": "^1.0.36",
+        "@types/sinon": "^10.0.19",
+        "@types/supertest": "^2.0.14",
         "@types/url-join": "^4.0.1",
-        "@types/uuid": "^8.3.4",
-        "chai": "4.3.6",
+        "@types/uuid": "^9.0.5",
+        "chai": "4.3.10",
         "cross-env": "7.0.3",
-        "mocha": "^9.2.2",
-        "nock": "^13.2.4",
-        "nodemon": "^2.0.15",
+        "mocha": "^10.2.0",
+        "nock": "^13.3.3",
+        "nodemon": "^3.0.1",
         "nyc": "^15.1.0",
-        "pino-pretty": "^10.2.0",
-        "rimraf": "^5.0.1",
-        "sinon": "^13.0.1",
-        "supertest": "6.2.2",
-        "timekeeper": "^2.2.0",
-        "ts-node": "^10.7.0",
-        "typescript": "^4.6.3"
+        "pino-pretty": "^10.2.3",
+        "rimraf": "^5.0.5",
+        "sinon": "^16.1.0",
+        "supertest": "6.3.3",
+        "timekeeper": "^2.3.1",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.9.5"
     },
     "dependencies": {
         "@namecheap/error-extender": "^1.2.0",
-        "@newrelic/native-metrics": "^8.0.0",
-        "@types/escape-html": "^1.0.2",
+        "@newrelic/native-metrics": "^10.0.1",
         "axios": "^0.26.1",
-        "bcrypt": "^5.0.1",
-        "body-parser": "^1.20.0",
-        "config": "^3.3.7",
-        "connect-session-knex": "^2.1.1",
-        "deep-equal": "^2.1.0",
+        "bcrypt": "^5.1.1",
+        "body-parser": "^1.20.2",
+        "config": "^3.3.9",
+        "connect-session-knex": "^3.0.1",
+        "deep-equal": "^2.2.2",
         "dotenv-cli": "^7.3.0",
         "escape-html": "^1.0.3",
-        "express": "^4.17.3",
-        "express-session": "^1.17.2",
+        "express": "^4.18.2",
+        "express-session": "^1.17.3",
         "http-shutdown": "^1.2.2",
         "ilc-plugins-sdk": "^1.7.0",
         "is-valid-domain": "0.1.6",
-        "joi": "^17.6.0",
-        "knex": "^2.4.2",
+        "joi": "^17.11.0",
+        "knex": "^3.0.1",
         "lodash": "^4.17.21",
         "mysql": "^2.18.1",
-        "newrelic": "^8.9.1",
-        "node-html-parser": "^6.1.6",
-        "openid-client": "^5.1.4",
-        "passport": "^0.5.2",
+        "newrelic": "^11.1.0",
+        "node-html-parser": "^6.1.10",
+        "openid-client": "^5.6.0",
+        "passport": "^0.6.0",
         "passport-http-bearer": "^1.0.1",
         "passport-local": "^1.0.0",
         "pg": "^8.11.3",
-        "query-string": "^7.1.1",
+        "query-string": "^7.1.3",
         "serve-static": "^1.15.0",
         "source-map-support": "^0.5.21",
         "sqlite3": "^5.1.6",
         "url-join": "^4.0.1",
-        "uuid": "^8.3.2"
+        "uuid": "^9.0.1"
     },
     "engines": {
-        "node": ">=16 <17"
+        "node": "^20.8.0"
     },
     "engineStrict": true
 }
