--- a/e2e/package.json
+++ b/e2e/package.json
@@ -15,18 +15,23 @@
     "license": "UNLICENSED",
     "dependencies": {
         "@codeceptjs/mock-request": "^0.3.1",
-        "@codeceptjs/ui": "^0.4.6",
-        "@pollyjs/adapter-puppeteer": "^6.0.5",
-        "@pollyjs/core": "^6.0.5",
-        "codeceptjs": "^3.3.0",
-        "codeceptjs-chai": "^2.3.2",
+        "@codeceptjs/ui": "^0.7.0",
+        "@pollyjs/adapter-puppeteer": "^6.0.6",
+        "@pollyjs/core": "^6.0.6",
+        "codeceptjs": "^3.5.6",
+        "codeceptjs-chai": "^2.3.5",
         "cross-env": "^7.0.3",
         "execa": "^5.1.1",
-        "mocha-multi": "^1.1.6",
+        "mocha-multi": "^1.1.7",
         "mochawesome": "^7.1.3",
-        "puppeteer": "^13.5.2",
-        "ts-node": "^10.7.0",
+        "puppeteer": "21.1.1",
+        "terminate": "^2.6.1",
+        "ts-node": "^10.9.1",
         "typescript": "^4.6.3",
-        "wait-on": "^6.0.1"
-    }
+        "wait-on": "^7.0.1"
+    },
+    "engines": {
+        "node": "^20.8.0"
+    },
+    "engineStrict": true
 }
