--- a/ilc/package.json
+++ b/ilc/package.json
@@ -11,9 +11,9 @@
     "test:client": "npm run build:systemjs && cross-env NODE_ENV=test karma start",
     "test:client:watch": "npm run test:client -- --single-run=false --auto-watch=true",
     "start": "node --max-http-header-size 30000 server/index.js",
-    "dev": "npm run build:polyfills && cross-env NODE_ENV=development nodemon --ignore './public/' --max-http-header-size 30000 server/index.js",
+    "dev": "npm run build:polyfills && cross-env NODE_ENV=development nodemon --max-http-header-size 30000 server/index.js",
     "build": "rimraf public && npm run build:systemjs && npm run build:client && npm run build:polyfills",
-    "build:client": "webpack --config build/webpack.js --progress --hide-modules",
+    "build:client": "webpack --config build/webpack.js --progress",
     "build:systemjs": "node ./systemjs/build.js",
     "build:polyfills": "mkdir public || true && nwget https://polyfill.io/v3/polyfill.min.js?features=URL%2CObject.entries%2CDocumentFragment.prototype.append%2CElement.prototype.append%2CElement.prototype.remove%2CObject.assign%2CElement.prototype.closest%2CCustomEvent%2CObject.values%2CArray.from -O ./public/polyfill.min.js"
   },
