--- a/registry/package.json
+++ b/registry/package.json
@@ -8,7 +8,7 @@
         "compile": "tsc --incremental",
         "dev": "nodemon -e ts,json5 --exec \"npx tsc --incremental && dotenv -- npm run start\" ",
         "build": "npm run compile && cd ./client && npm run build",
-        "start": "node -r source-map-support/register ./build/server/index.js",
+        "start": "dotenv -- node -r source-map-support/register ./build/server/index.js",
         "start-docker": "npm run migrate && npm start",
         "knex": "knex",
         "migrate": "dotenv -- knex --knexfile config/knexfile.ts migrate:latest",
