--- a/ilc/tsconfig.client.json
+++ b/ilc/tsconfig.client.json
@@ -1,20 +1,10 @@
 {
-  "compilerOptions": {
-    "outDir": "dist",
-    "module": "commonjs",
-    "target": "es6",
-    "allowJs": true,
-    "strict": true,
-    "esModuleInterop": true
-  },
+  "extends": "./tsconfig.json",
   "include": [
     "./client/**/*.ts",
     "./client/**/*.js",
     "./common/**/*.ts",
     "./common/**/*.js",
     "./system/**/*.js"
-  ],
-  "exclude": [
-    "./node_modules"
   ]
 }
