--- a/ilc/.mocharc.json
+++ b/ilc/.mocharc.json
@@ -1,9 +1,9 @@
 {
     "spec": [
-        "dist/server/**/*.spec.js",
-        "dist/common/**/*.spec.js"
+        "server/**/*.spec.js",
+        "common/**/*.spec.js"
     ],
-    "require": "@babel/register",
+    "require": "ts-node/register",
     "timeout": 5000,
     "exclude": "node_modules/**/*"
 }
