feat(registry): allow data-ilc-instructions attribute in   Link header for css stylesheets

--- a/ilc/tsconfig.json
+++ b/ilc/tsconfig.json
@@ -7,6 +7,6 @@
     "strict": true,
     "esModuleInterop": true
   },
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "public"],
   "include": ["**/*.ts", "**/*.js"]
 }
