feat: added versionId field in responses

--- a/registry/package.json
+++ b/registry/package.json
@@ -17,8 +17,8 @@
         "seed": "dotenv -- knex --knexfile config/knexfile.ts seed:run",
         "seed:make": "knex --knexfile config/knexfile.ts seed:make -x ts",
         "test": "cross-env NODE_ENV=test NODE_CONFIG_ENV=sqlite-test mocha",
-        "test:mysql": "cross-env-shell NODE_ENV=test NODE_CONFIG_ENV=mysql-test DB_CLIENT=mysql \"npm run reset && mocha\" ",
-        "test:postgres": "cross-env-shell NODE_ENV=test NODE_CONFIG_ENV=postgres-test DB_CLIENT=pg \"npm run reset && mocha\" ",
+        "test:mysql": "cross-env-shell NODE_ENV=test NODE_CONFIG_ENV=mysql-test DB_CLIENT=mysql \"npm run reset && mocha ${MOCHA_ARGS}\" ",
+        "test:postgres": "cross-env-shell NODE_ENV=test NODE_CONFIG_ENV=postgres-test DB_CLIENT=pg \"npm run reset && mocha ${MOCHA_ARGS}\" ",
         "test:ci": "npm run migrate && cross-env NODE_ENV=test nyc mocha --forbid-only",
         "test:coverage": "cross-env NODE_ENV=test nyc mocha",
         "reset": "dotenv bash ./scripts/reset.sh && npm run migrate",
