fix(ilc/server): skip tailorx seobotstream errors logging

--- a/ilc/package.json
+++ b/ilc/package.json
@@ -11,7 +11,7 @@
     "test:client": "npm run build:systemjs && cross-env NODE_ENV=test karma start",
     "test:client:watch": "npm run test:client -- --single-run=false --auto-watch=true",
     "start": "node --max-http-header-size 30000 dist/server/index.js",
-    "dev": "npm run build:polyfills && cross-env NODE_ENV=development nodemon -w server -w common --exec \"npm run build:server && npm run start\" ",
+    "dev": "npm run build:polyfills && cross-env NODE_ENV=development nodemon -w server -w common --exec \"npm run build:server && npm run start | pino-pretty\" ",
     "build": "rimraf public && npm run build:server && npm run build:systemjs && npm run build:client && npm run build:polyfills",
     "build:server": "npx tsc --project ./tsconfig.server.json && npx copyfiles -f ./config/* ./dist/config/",
     "build:client": "webpack --config build/webpack.js --progress",
@@ -22,7 +22,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@namecheap/error-extender": "^2.0.0",
-    "@namecheap/tailorx": "^8.0.0",
+    "@namecheap/tailorx": "^8.1.0",
     "@newrelic/native-metrics": "^10.0.1",
     "agentkeepalive": "^4.5.0",
     "axios": "^0.21.4",
@@ -46,6 +46,7 @@
     "parseurl": "^1.3.3",
     "serve-static": "^1.15.0",
     "single-spa": "5.6.0",
+    "source-map-support": "^0.5.21",
     "systemjs": "6.10.1",
     "systemjs-css-extra": "^1.0.2",
     "url-join": "^4.0.1",
@@ -82,6 +83,7 @@
     "nock": "^13.3.4",
     "nodemon": "^3.0.1",
     "nyc": "^15.1.0",
+    "pino-pretty": "^10.3.1",
     "rimraf": "^5.0.5",
     "sinon": "^16.1.0",
     "supertest": "^6.3.3",
