--- a/package.json
+++ b/package.json
@@ -29,5 +29,6 @@
         "concurrently": "^8.2.1",
         "husky": "^8.0.3",
         "prettier": "^3.0.3"
-    }
+    },
+    "dependencies": {}
 }
