feat: return NotFound and BadRequest errors in html on intenral _ilc render template endpoint
refactor some part to ts
move default html page to html file
fix issue with async context loss
add handleClientError() method

--- a/ilc/package.json
+++ b/ilc/package.json
@@ -11,9 +11,9 @@
     "test:client": "npm run build:systemjs && cross-env NODE_ENV=test karma start",
     "test:client:watch": "npm run test:client -- --single-run=false --auto-watch=true",
     "start": "node --max-http-header-size 30000 dist/server/index.js",
-    "dev": "npm run build:polyfills && cross-env NODE_ENV=development nodemon -w server -w common --exec \"npm run build:server && npm run start | pino-pretty\" ",
+    "dev": "npm run build:polyfills && cross-env NODE_ENV=development nodemon -w server -w common -e ts,js,json --exec \"npm run build:server && npm run start | pino-pretty\" ",
     "build": "rimraf public && npm run build:server && npm run build:systemjs && npm run build:client && npm run build:polyfills",
-    "build:server": "npx tsc --project ./tsconfig.server.json && npx copyfiles -f ./config/* ./dist/config/",
+    "build:server": "rimraf ./dist && tsc --project ./tsconfig.server.json && copyfiles ./config/* ./server/assets/* ./dist/",
     "build:client": "webpack --config build/webpack.js --progress",
     "build:systemjs": "node ./systemjs/build.js",
     "build:polyfills": "mkdir public || true && nwget https://polyfill.io/v3/polyfill.min.js?features=URL%2CObject.entries%2CDocumentFragment.prototype.append%2CElement.prototype.append%2CElement.prototype.remove%2CObject.assign%2CElement.prototype.closest%2CCustomEvent%2CObject.values%2CArray.from -O ./public/polyfill.min.js"
@@ -35,6 +35,7 @@
     "eventemitter3": "^5.0.1",
     "fast-glob": "^3.3.1",
     "fastify": "^2.15.2",
+    "http-status-codes": "^2.3.0",
     "ilc-plugins-sdk": "^2.1.0",
     "ilc-sdk": "^5.1.4",
     "is-url": "^1.2.4",
@@ -60,7 +61,9 @@
     "@babel/preset-env": "^7.22.20",
     "@babel/register": "^7.22.15",
     "@types/chai": "4.3.7",
+    "@types/config": "^3.3.3",
     "@types/mocha": "10.0.2",
+    "@types/newrelic": "^9.14.3",
     "@types/sinon": "10.0.19",
     "babel-loader": "^9.1.3",
     "babel-plugin-istanbul": "^6.1.1",
