--- a/ilc/package.json
+++ b/ilc/package.json
@@ -45,6 +45,7 @@
     "newrelic": "^11.1.0",
     "node-html-parser": "^6.1.10",
     "parseurl": "^1.3.3",
+    "safe-json-stringify": "^1.2.0",
     "serve-static": "^1.15.0",
     "single-spa": "5.6.0",
     "source-map-support": "^0.5.21",
