--- a/registry/package.json
+++ b/registry/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "tsc": "tsc",
         "compile": "tsc --incremental",
-        "dev": "nodemon -e ts,json5 --exec \"npx tsc --incremental && dotenv -- npm run start\" ",
+        "dev": "rimraf build && nodemon -e ts,json5 --exec \"tsc --incremental && npm run start | pino-pretty\" ",
         "build": "npm run compile && cd ./client && npm run build",
         "start": "dotenv -- node -r source-map-support/register ./build/server/index.js",
         "start-docker": "npm run migrate && npm start",
@@ -38,29 +38,31 @@
         "@types/express-serve-static-core": "4.17.37",
         "@types/express-session": "^1.17.8",
         "@types/is-valid-domain": "0.0.2",
+        "@types/jsonwebtoken": "^9.0.6",
         "@types/lodash": "^4.14.199",
         "@types/mocha": "^10.0.2",
         "@types/newrelic": "^9.14.1",
-        "@types/node": "^20.8.3",
-        "@types/passport": "^1.0.13",
-        "@types/passport-http-bearer": "^1.0.38",
-        "@types/passport-local": "^1.0.36",
+        "@types/node": "^20.12.12",
+        "@types/passport": "^1.0.16",
+        "@types/passport-http-bearer": "^1.0.41",
+        "@types/passport-local": "^1.0.38",
         "@types/sinon": "^10.0.19",
         "@types/supertest": "^2.0.14",
         "@types/url-join": "^4.0.1",
         "@types/uuid": "^9.0.5",
         "chai": "4.3.10",
         "cross-env": "7.0.3",
+        "jsonwebtoken": "^9.0.2",
         "mocha": "^10.2.0",
         "nock": "^13.3.3",
         "nodemon": "^3.0.1",
         "nyc": "^15.1.0",
-        "pino-pretty": "^10.2.3",
+        "oauth2-mock-server": "^7.1.1",
+        "pino-pretty": "^11.0.0",
         "rimraf": "^5.0.5",
         "sinon": "^16.1.0",
         "supertest": "6.3.3",
-        "timekeeper": "^2.3.1",
-        "ts-node": "^10.9.1",
+        "ts-node": "^10.9.2",
         "typescript": "^4.9.5"
     },
     "dependencies": {
@@ -70,12 +72,12 @@
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
         "config": "^3.3.9",
-        "connect-session-knex": "^3.0.1",
+        "connect-session-knex": "^4.0.0",
         "deep-equal": "^2.2.2",
         "dotenv-cli": "^7.3.0",
         "escape-html": "^1.0.3",
         "express": "^4.18.2",
-        "express-session": "^1.17.3",
+        "express-session": "^1.18.0",
         "http-shutdown": "^1.2.2",
         "ilc-plugins-sdk": "^2.1.0",
         "is-valid-domain": "0.1.6",
@@ -86,7 +88,7 @@
         "newrelic": "^11.1.0",
         "node-html-parser": "^6.1.10",
         "openid-client": "^5.6.0",
-        "passport": "^0.6.0",
+        "passport": "^0.7.0",
         "passport-http-bearer": "^1.0.1",
         "passport-local": "^1.0.0",
         "pg": "^8.11.3",
