--- a/ilc/package.json
+++ b/ilc/package.json
@@ -22,12 +22,12 @@
   "dependencies": {
     "@namecheap/error-extender": "^2.1.0",
     "@namecheap/tailorx": "^8.1.0",
-    "@newrelic/native-metrics": "^10.2.0",
+    "@newrelic/native-metrics": "^11.0.0",
     "agentkeepalive": "^4.5.0",
-    "axios": "^0.21.4",
+    "axios": "^1.7.7",
     "cidr-matcher": "^2.1.1",
     "config": "^3.3.12",
-    "cookie": "^0.5.0",
+    "cookie": "^0.6.0",
     "cross-env": "^7.0.3",
     "debug": "^4.3.7",
     "deepmerge": "4.3.1",
@@ -41,7 +41,7 @@
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "lzutf8": "^0.6.3",
-    "newrelic": "^11.23.2",
+    "newrelic": "^12.5.1",
     "node-html-parser": "^6.1.13",
     "parseurl": "^1.3.3",
     "safe-json-stringify": "^1.2.0",
@@ -60,11 +60,11 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.25.4",
     "@babel/register": "^7.24.6",
-    "@types/chai": "4.3.7",
+    "@types/chai": "^4.3.19",
     "@types/config": "^3.3.5",
-    "@types/mocha": "10.0.2",
+    "@types/mocha": "^10.0.8",
     "@types/newrelic": "^9.14.4",
-    "@types/sinon": "10.0.19",
+    "@types/sinon": "^17.0.3",
     "babel-loader": "^9.2.1",
     "babel-plugin-istanbul": "^6.1.1",
     "babel-plugin-transform-async-to-promises": "^0.8.18",
@@ -85,18 +85,17 @@
     "nanohtml": "^1.10.0",
     "nock": "^13.5.5",
     "nodemon": "^3.1.7",
-    "nyc": "^15.1.0",
-    "pino-pretty": "^10.3.1",
-    "rimraf": "^5.0.10",
-    "sinon": "^16.1.3",
+    "nyc": "^17.1.0",
+    "pino-pretty": "^11.2.2",
+    "rimraf": "^6.0.1",
+    "sinon": "^19.0.2",
     "supertest": "^6.3.4",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-middleware": "^6.1.3",
-    "wrapper-webpack-plugin": "^2.2.2"
+    "webpack-dev-middleware": "^7.4.2"
   },
   "engines": {
     "node": "^20.8.0"
