--- a/ilc/package.json
+++ b/ilc/package.json
@@ -22,12 +22,12 @@
   "dependencies": {
     "@namecheap/error-extender": "^2.0.0",
     "@namecheap/tailorx": "^8.1.0",
-    "@newrelic/native-metrics": "^10.0.1",
+    "@newrelic/native-metrics": "^11.0.0",
     "agentkeepalive": "^4.5.0",
-    "axios": "^0.21.4",
+    "axios": "^1.7.7",
     "cidr-matcher": "^2.1.1",
-    "config": "^3.3.9",
-    "cookie": "^0.5.0",
+    "config": "^3.3.12",
+    "cookie": "^0.6.0",
     "cross-env": "^7.0.3",
     "debug": "^4.3.4",
     "deepmerge": "4.3.1",
@@ -41,8 +41,8 @@
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "lzutf8": "^0.6.3",
-    "newrelic": "^11.1.0",
-    "node-html-parser": "^6.1.10",
+    "newrelic": "^12.5.1",
+    "node-html-parser": "^6.1.13",
     "parseurl": "^1.3.3",
     "safe-json-stringify": "^1.2.0",
     "serve-static": "^1.15.0",
@@ -58,14 +58,14 @@
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-proposal-private-methods": "^7.16.11",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.22.20",
-    "@babel/register": "^7.22.15",
-    "@types/chai": "4.3.7",
-    "@types/config": "^3.3.3",
-    "@types/mocha": "10.0.2",
-    "@types/newrelic": "^9.14.3",
-    "@types/sinon": "10.0.19",
-    "babel-loader": "^9.1.3",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/register": "^7.24.6",
+    "@types/chai": "^4.3.19",
+    "@types/config": "^3.3.5",
+    "@types/mocha": "^10.0.8",
+    "@types/newrelic": "^9.14.4",
+    "@types/sinon": "^17.0.3",
+    "babel-loader": "^9.2.1",
     "babel-plugin-istanbul": "^6.1.1",
     "babel-plugin-transform-async-to-promises": "^0.8.18",
     "chai": "^4.3.10",
@@ -83,20 +83,19 @@
     "karma-webpack": "^5.0.0",
     "mocha": "^10.2.0",
     "nanohtml": "^1.10.0",
-    "nock": "^13.3.4",
-    "nodemon": "^3.0.1",
-    "nyc": "^15.1.0",
-    "pino-pretty": "^10.3.1",
-    "rimraf": "^5.0.5",
-    "sinon": "^16.1.0",
-    "supertest": "^6.3.3",
+    "nock": "^13.5.5",
+    "nodemon": "^3.1.7",
+    "nyc": "^17.1.0",
+    "pino-pretty": "^11.2.2",
+    "rimraf": "^6.0.1",
+    "sinon": "^19.0.2",
+    "supertest": "^6.3.4",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-middleware": "^6.1.1",
-    "wrapper-webpack-plugin": "^2.2.2"
+    "webpack-dev-middleware": "^7.4.2"
   },
   "engines": {
     "node": "^20.8.0"
