--- a/registry/package.json
+++ b/registry/package.json
@@ -30,14 +30,14 @@
     "devDependencies": {
         "@istanbuljs/nyc-config-typescript": "^1.0.2",
         "@types/bcrypt": "^5.0.2",
-        "@types/chai": "4.3.6",
-        "@types/config": "3.3.1",
+        "@types/chai": "^5.0.0",
+        "@types/config": "^3.3.5",
         "@types/deep-equal": "^1.0.4",
         "@types/escape-html": "^1.0.4",
-        "@types/express": "4.17.18",
-        "@types/express-serve-static-core": "4.17.37",
+        "@types/express": "^4.17.21",
+        "@types/express-serve-static-core": "^4.19.5",
         "@types/express-session": "^1.18.0",
-        "@types/is-valid-domain": "0.0.2",
+        "@types/is-valid-domain": "0.0.4",
         "@types/jsonwebtoken": "^9.0.7",
         "@types/lodash": "^4.17.9",
         "@types/mocha": "^10.0.8",
@@ -46,11 +46,11 @@
         "@types/passport": "^1.0.16",
         "@types/passport-http-bearer": "^1.0.41",
         "@types/passport-local": "^1.0.38",
-        "@types/sinon": "^10.0.20",
+        "@types/sinon": "^17.0.3",
         "@types/supertest": "^2.0.16",
         "@types/url-join": "^4.0.3",
         "@types/uuid": "^9.0.8",
-        "chai": "4.3.10",
+        "chai": "4.5.0",
         "cross-env": "7.0.3",
         "jsonwebtoken": "^9.0.2",
         "mocha": "^10.7.3",
@@ -60,15 +60,15 @@
         "oauth2-mock-server": "^7.1.2",
         "pino-pretty": "^11.2.2",
         "rimraf": "^5.0.10",
-        "sinon": "^16.1.3",
-        "supertest": "6.3.3",
+        "sinon": "^19.0.2",
+        "supertest": "6.3.4",
         "ts-node": "^10.9.2",
         "typescript": "^4.9.5"
     },
     "dependencies": {
         "@namecheap/error-extender": "^2.1.0",
-        "@newrelic/native-metrics": "^10.2.0",
-        "axios": "^0.26.1",
+        "@newrelic/native-metrics": "^11.0.0",
+        "axios": "^1.7.7",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.3",
         "config": "^3.3.12",
