chore(registry): update some major deps

--- a/registry/package.json
+++ b/registry/package.json
@@ -30,7 +30,7 @@
     "devDependencies": {
         "@istanbuljs/nyc-config-typescript": "^1.0.2",
         "@types/bcrypt": "^5.0.2",
-        "@types/chai": "^5.0.0",
+        "@types/chai": "^4.3.20",
         "@types/config": "^3.3.5",
         "@types/deep-equal": "^1.0.4",
         "@types/escape-html": "^1.0.4",
@@ -56,14 +56,14 @@
         "mocha": "^10.7.3",
         "nock": "^13.5.5",
         "nodemon": "^3.1.7",
-        "nyc": "^15.1.0",
+        "nyc": "^17.1.0",
         "oauth2-mock-server": "^7.1.2",
         "pino-pretty": "^11.2.2",
-        "rimraf": "^5.0.10",
+        "rimraf": "^6.0.1",
         "sinon": "^19.0.2",
-        "supertest": "6.3.4",
+        "supertest": "^7.0.0",
         "ts-node": "^10.9.2",
-        "typescript": "^4.9.5"
+        "typescript": "^5.6.2"
     },
     "dependencies": {
         "@namecheap/error-extender": "^2.1.0",
@@ -72,7 +72,7 @@
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.3",
         "config": "^3.3.12",
-        "connect-session-knex": "^4.0.2",
+        "connect-session-knex": "^5.0.0",
         "deep-equal": "^2.2.3",
         "dotenv-cli": "^7.4.2",
         "escape-html": "^1.0.3",
@@ -85,7 +85,7 @@
         "knex": "^3.1.0",
         "lodash": "^4.17.21",
         "mysql": "^2.18.1",
-        "newrelic": "^11.23.2",
+        "newrelic": "^12.5.1",
         "node-html-parser": "^6.1.13",
         "openid-client": "^5.7.0",
         "passport": "^0.7.0",
