--- a/e2e/package.json
+++ b/e2e/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "start": "codeceptjs run --reporter mocha-multi",
         "start:verbose": "cross-env TEST_ENV=verbose npm start -- --verbose",
-        "start:verbose:ui": "cross-env SHOW_UI=true npm run start:verbose",
+        "start:verbose:ui": "cross-env SHOW_UI=true npm run start:verbose -- -p pauseOnFail",
         "start:gui": "codecept-ui",
         "generate-typings": "codeceptjs def -o ./typings"
     },
@@ -15,16 +15,16 @@
     "license": "UNLICENSED",
     "dependencies": {
         "@codeceptjs/mock-request": "^0.3.1",
-        "@codeceptjs/ui": "^0.7.0",
+        "@codeceptjs/ui": "^1.2.0",
         "@pollyjs/adapter-puppeteer": "^6.0.6",
         "@pollyjs/core": "^6.0.6",
-        "codeceptjs": "^3.5.6",
+        "codeceptjs": "^3.6.7",
         "codeceptjs-chai": "^2.3.5",
         "cross-env": "^7.0.3",
         "execa": "^5.1.1",
         "mocha-multi": "^1.1.7",
         "mochawesome": "^7.1.3",
-        "puppeteer": "21.1.1",
+        "puppeteer": "^23.4.1",
         "terminate": "^2.6.1",
         "ts-node": "^10.9.1",
         "typescript": "^4.6.3",
