--- a/e2e/package.json
+++ b/e2e/package.json
@@ -7,6 +7,7 @@
     "scripts": {
         "start": "codeceptjs run --reporter mocha-multi",
         "start:verbose": "cross-env TEST_ENV=verbose npm start -- --verbose",
+        "start:flaky": "codeceptjs run-rerun --verbose",
         "start:verbose:ui": "cross-env SHOW_UI=true npm run start:verbose -- -p pauseOnFail",
         "start:gui": "codecept-ui",
         "generate-typings": "codeceptjs def -o ./typings"
@@ -25,13 +26,16 @@
         "mocha-multi": "^1.1.7",
         "mochawesome": "^7.1.3",
         "puppeteer": "^23.4.1",
-        "terminate": "^2.6.1",
-        "ts-node": "^10.9.1",
-        "typescript": "^4.6.3",
-        "wait-on": "^7.0.1"
+        "terminate": "^2.8.0",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.6.2",
+        "wait-on": "^8.0.1"
     },
     "engines": {
         "node": "^20.8.0"
     },
-    "engineStrict": true
+    "engineStrict": true,
+    "devDependencies": {
+        "@types/wait-on": "^5.3.4"
+    }
 }
