--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -1,17 +1,18 @@
 {
-  "compilerOptions": {
-    "target": "ES2020",
-    "module": "commonjs",
-    "sourceMap": true,
-    "strict": true,
-    "typeRoots": [
-      "./node_modules/@types"
-    ],
-    "types": [
-      "node",
-      "./typings/steps",
-      "./typings/mock-request"
-    ],
-    "esModuleInterop": true
-  }
+    "compilerOptions": {
+        "target": "ES2020",
+        "lib": ["ES2020", "DOM"],
+        "module": "commonjs",
+        "sourceMap": true,
+        "strict": true,
+        "typeRoots": ["./node_modules/@types"],
+        "types": ["codeceptjs", "node", "./typings/steps", "./typings/mock-request"],
+        "esModuleInterop": true,
+        "declaration": true,
+        "skipLibCheck": true
+    },
+    "exclude": ["node_modules"],
+    "ts-node": {
+        "files": true
+    }
 }
