fix(docs): fix docs build

--- a/.mkdocs/Dockerfile
+++ b/.mkdocs/Dockerfile
@@ -1,3 +1,3 @@
-FROM squidfunk/mkdocs-material:7.3.4
+FROM squidfunk/mkdocs-material:9.5.38
 
-RUN pip3 install mkdocs-macros-plugin
+RUN pip3 install mkdocs-macros-plugin==1.0.4
