--- a/registry/package.json
+++ b/registry/package.json
@@ -95,6 +95,7 @@
         "serve-static": "^1.16.2",
         "source-map-support": "^0.5.21",
         "sqlite3": "^5.1.7",
+        "ts-exhaustive-check": "^1.0.0",
         "url-join": "^4.0.1",
         "uuid": "^9.0.1"
     },
