perf: stop using localstorage polyfill on server side as it's contains serialization/deserialization on each call to cache
+ts refactoring

--- a/ilc/.mocharc.json
+++ b/ilc/.mocharc.json
@@ -1,7 +1,7 @@
 {
     "spec": [
-        "server/**/*.spec.js",
-        "common/**/*.spec.js"
+        "server/**/*.spec.{js,ts}",
+        "common/**/*.spec.{js,ts}"
     ],
     "require": "ts-node/register",
     "timeout": 5000,
