--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
         "npm": ">= 6.0.0"
     },
     "devDependencies": {
+        "@commitlint/cli": "^19.6.1",
+        "@commitlint/config-conventional": "^19.6.0",
         "concurrently": "^9.0.1",
-        "husky": "^9.1.6",
+        "husky": "^9.1.7",
         "prettier": "^3.3.3"
-    },
-    "dependencies": {}
+    }
 }
