feat: add debug

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -273,7 +273,7 @@ jobs:
                   cache-dependency-path: '**/package-lock.json'
 
             - name: Install dependencies
-              run: npm ci
+              run: npm install --verbose
 
             - name: Build ILC & Registry
               run: npm run build
